--- a/package.json
+++ b/package.json
@@ -1,32 +1,50 @@
 {
-  "name": "web",
-  "version": "0.1.0",
-  "private": true,
+  "name": "mobile",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@types/node": "20.1.7",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
+    "@expo-google-fonts/bai-jamjuree": "^0.2.3",
+    "@expo-google-fonts/roboto": "^0.2.3",
+    "@expo/webpack-config": "^18.0.1",
+    "@types/react": "~18.0.27",
     "axios": "^1.4.0",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
-    "jwt-decode": "^3.1.2",
-    "lucide-react": "^0.219.0",
-    "next": "13.4.2",
-    "postcss": "8.4.23",
+    "expo": "^48.0.17",
+    "expo-auth-session": "~4.0.3",
+    "expo-constants": "~14.2.1",
+    "expo-crypto": "~12.2.1",
+    "expo-font": "~11.1.1",
+    "expo-linking": "~4.0.1",
+    "expo-router": "^1.5.3",
+    "expo-secure-store": "~12.1.1",
+    "expo-status-bar": "~1.4.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.10",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.0",
     "@rocketseat/eslint-config": "^1.2.0",
-    "prettier-plugin-tailwindcss": "^0.3.0"
-  }
+    "eslint": "^8.40.0",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "tailwindcss": "^3.3.2"
+  },
+  "overrides": {
+    "metro": "0.76.0",
+    "metro-resolver": "0.76.0"
+  },
+  "private": true
 }
